deployments are working